# vrptw-powerful-route-minimization-heuristic

src/: eama_solver.c  eama_solver.h  ejection.c
test/: CMakeLists.txt  solver_timeout_smoke.cmake
test/unit/: CMakeLists.txt  eama_solver_stub.c
